--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           return doSomethingWith("h_h",json);
         });  
       function  doSomethingWith(nom,json){
-        document.getElementById(nom).innerHTML(json.vierge) 
+        document.getElementById(nom).innerHTML=json.vierge;
       }
  
       const span_h = document.getElementById("aig_h");
