--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
+    <link href="style.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lobster|Roboto:400,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap"
+      rel="stylesheet"
+    />
     <style>
-      /*CSS RESETS*/
-
       body {
         background-color: #fff;
         line-height: 1.6;
@@ -45,21 +51,6 @@
       .card:hover {
         margin-top: 2px;
         box-shadow: none;
-      }
-
-      .date {
-        display: block;
-        min-width: 162px;
-        /* padding-right: 30px; */
-        /* border-right: 2px solid #295C7B; */
-        font-family: "Roboto", sans-serif;
-        font-size: 1.2em;
-      }
-      .greet {
-        min-width: 162px;
-        /* padding-right: 30px; */
-        font-family: "Oooh Baby", cursive;
-        font-size: 1.2em;
       }
     </style>
     <style>
@@ -98,62 +89,78 @@
     </style>
   </head>
   <body>
-    <link href="style.css" rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lobster|Roboto:400,700"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap"
-      rel="stylesheet"
-    />
-
-    <div class="full-table">
-      <div class="table-cell">
-        <div class="card">
-          <div class="date" id="date"></div>
-          <div class="clock">
-            <span class="horloge" id="horloge"></span>
-            <div class="hand hours" id="aig_h"></div>
-            <div class="hand minutes" id="aig_m"></div>
-            <div class="hand seconds" id="aig_s"></div>
-            <div class="point"></div>
-            <div class="marker">
-              <span class="marker__1"></span>
-              <span class="marker__2"></span>
-              <span class="marker__3"></span>
-              <span class="marker__4"></span>
-            </div>
-          </div>
+    <div class="card">
+      <div class="date" id="date"></div>
+      <div class="clock">
+        <span class="horloge" id="horloge"></span>
+        <div class="hand hours" id="aig_h"></div>
+        <div class="hand minutes" id="aig_m"></div>
+        <div class="hand seconds" id="aig_s"></div>
+        <div class="point"></div>
+        <div class="marker">
+          <span class="marker__1"></span>
+          <span class="marker__2"></span>
+          <span class="marker__3"></span>
+          <span class="marker__4"></span>
         </div>
       </div>
-      <ul class="container float">
-        <li class="item float-item" id="h_j">Jour</li>
-        <li class="item float-item" id="h_h">Hebdomadaire</li>
-        <a href="https://kayoo123.github.io/astroo-api/mensuel.json"
-          ><li class="item float-item" id="h_m">Mensuel</li></a
-        >
-      </ul>
-    </div> 
+    </div>
+    <div class="card">
+      <div class="chip">
+        <div class="chip__icon">
+          <ion-icon name="color-palette"></ion-icon>
+        </div>
+        <p id="h_j">Neumorphic Design</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="chip">
+        <div class="chip__icon">
+          <ion-icon name="color-palette"></ion-icon>
+        </div>
+        <p id="h_h">Neumorphic Design</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="chip">
+        <div class="chip__icon">
+          <ion-icon name="color-palette"></ion-icon>
+        </div>
+        <p id="h_m">Neumorphic Design</p>
+      </div>
+    </div>
 
     <script>
       var url = "https://kayoo123.github.io/astroo-api/jour.json";
-      
-      window.fetch(url).then(function (response) {
+
+      window
+        .fetch(url)
+        .then(function (response) {
           return response.json();
-        }).then(function (json) { 
-          return doSomethingWith("h_j",json);
-        }); 
-      window.fetch("https://kayoo123.github.io/astroo-api/hebdomadaire.json").then(function (response) {
+        })
+        .then(function (json) {
+          return doSomethingWith("h_j", json);
+        });
+      window
+        .fetch("https://kayoo123.github.io/astroo-api/hebdomadaire.json")
+        .then(function (response) {
           return response.json();
-        }).then(function (json) {
-          
-          return doSomethingWith("h_h",json);
-        });  
-      function  doSomethingWith(nom,json){
-        document.getElementById(nom).innerHTML=json.vierge;
+        })
+        .then(function (json) {
+          return doSomethingWith("h_h", json);
+        });
+      window
+        .fetch("https://kayoo123.github.io/astroo-api/mensuel.json")
+        .then(function (response) {
+          return response.json();
+        })
+        .then(function (json) {
+          return doSomethingWith("h_m", json);
+        });
+      function doSomethingWith(nom, json) {
+        document.getElementById(nom).innerHTML = json.vierge;
       }
- 
+
       const span_h = document.getElementById("aig_h");
       const span_m = document.getElementById("aig_m");
       const span_s = document.getElementById("aig_s");
@@ -171,8 +178,16 @@
         if (hrs < 12) greet = "Bonjour";
         else if (hrs >= 12 && hrs <= 17) greet = "Bon après midi ";
         else if (hrs >= 17 && hrs <= 24) greet = "Bonne soirée  ";
-        span_date.innerHTML =greet +" nous sommes le " +today.toLocaleDateString("fr-FR", options);
-        span_horloge.innerText =zeros(today.getHours()) +":" +zeros(today.getMinutes()) +":" +zeros(today.getSeconds());
+        span_date.innerHTML =
+          greet +
+          " nous sommes le " +
+          today.toLocaleDateString("fr-FR", options);
+        span_horloge.innerText =
+          zeros(today.getHours()) +
+          ":" +
+          zeros(today.getMinutes()) +
+          ":" +
+          zeros(today.getSeconds());
         var h = ((today.getHours() % 12) + today.getMinutes() / 59) * 30; // 22 % 12 = 10pm
         span_h.style.transform = `rotate(${h}deg)`;
         span_m.style.transform = "rotate(" + today.getMinutes() * 6 + "deg)";
@@ -187,7 +202,7 @@
         return num;
       }
 
-      function dateTime() { 
+      function dateTime() {
         clock();
         setTimeout(dateTime, 500);
       }
