--- a/index.html
+++ b/index.html
@@ -16,41 +16,9 @@
     />
     <style>
       body {
-        background-color: #fff;
+        background-image: linear-gradient(120deg,#3498db,#8e44ad);
         line-height: 1.6;
         font-family: "Oooh Baby", cursive;
-      }
-
-      h1 {
-        margin-top: 0;
-      }
-
-      /*CSS START*/
-
-      .full-table {
-        display: table;
-        height: 100%;
-        width: 100%;
-      }
-
-      .table-cell {
-        display: table-cell;
-        vertical-align: middle;
-        text-align: center;
-      }
-
-      .card {
-        padding: 10px 25px 10px 25px;
-        border-radius: 10px;
-        background: #009688;
-        color: #fff;
-        display: inline-block;
-        box-shadow: 2px 2px 1px 0px #295c7b;
-      }
-
-      .card:hover {
-        margin-top: 2px;
-        box-shadow: none;
       }
     </style>
     <style>
