--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <style>
       body {
-        background-image: linear-gradient(120deg,#3498db,#8e44ad);
+        background-image: radial-gradient(ellipse at center, rgba(255,179,206,0) 0%, rgba(255,180,199,0) 43%, rgba(255,181,189,0.43) 100%);
         line-height: 1.6;
         font-family: "Oooh Baby", cursive;
       }
@@ -57,6 +57,8 @@
     </style>
   </head>
   <body>
+    <div class="container">
+      <div class="components">
     <div class="card">
       <div class="date" id="date"></div>
       <div class="clock">
@@ -73,6 +75,8 @@
         </div>
       </div>
     </div>
+    <a class="weatherwidget-io" href="https://forecast7.com/fr/45d994d72/villefranche-sur-saone/" data-label_1="VILLEFRANCHE-SUR-SAONE" data-font="Open Sans" data-icons="Climacons Animated" data-days="5" data-theme="hexellence" data-textcolor="#64a9b7" data-suncolor="#feffa4" data-cloudcolor="#93b8ed" >VILLEFRANCHE-SUR-SAONE</a>
+         
     <div class="card">
       <div class="chip">
         <div class="chip__icon">
@@ -97,7 +101,7 @@
         <p id="h_m">Neumorphic Design</p>
       </div>
     </div>
-
+</div>  </div>  
     <script>
       var url = "https://kayoo123.github.io/astroo-api/jour.json";
 
@@ -178,5 +182,9 @@
       dateTime();
       // END
     </script>
+    <!-- forcast -->
+<script>
+  !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+  </script>
   </body>
 </html>
