--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           rgba(255, 181, 189, 0.43) 100%
         );
         line-height: 1.6;
+        background-size: cover;
         font-family: "Oooh Baby", cursive;
       }
     </style>
@@ -70,30 +71,40 @@
           >
         </div>
         <div class="col">
-          <div class="card">
-            <div class="chip">
-              <div class="chip__icon">
-                <ion-icon name="color-palette"></ion-icon>
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  Journalier
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body" id="h_j"> </div>
               </div>
-              <p id="h_j">Neumorphic Design</p>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                  Hebdomadaire
+                </button>
+              </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body" id="h_h"> </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                  Mensuel
+                </button>
+              </h2>
+              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body" id="h_m"> </div>
+              </div>
             </div>
           </div>
-          <div class="card">
-            <div class="chip">
-              <div class="chip__icon">
-                <ion-icon name="color-palette"></ion-icon>
-              </div>
-              <p id="h_h">Neumorphic Design</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="chip">
-              <div class="chip__icon">
-                <ion-icon name="color-palette"></ion-icon>
-              </div>
-              <p id="h_m">Neumorphic Design</p>
-            </div>
-          </div>
+           
+  
         </div>
       </div>
     </div>
