--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         );
         line-height: 1.6;
         background-size: cover;
-        font-family: "Oooh Baby", cursive;
+        font-family: "Oooh Baby" !important;
       }
     </style>
   </head>
