--- a/index.html
+++ b/index.html
@@ -28,9 +28,18 @@
           rgba(255, 180, 199, 0) 43%,
           rgba(255, 181, 189, 0.43) 100%
         );
-        line-height: 1.6;
         background-size: cover;
+        line-height: 1.6;
         font-family: "Oooh Baby" !important;
+      }
+      .container{
+        background-image: radial-gradient(
+          ellipse at center,
+          rgba(255, 179, 206, 0) 0%,
+          rgba(255, 180, 199, 0) 43%,
+          rgba(255, 181, 189, 0.43) 100%
+        );
+        background-size: cover;
       }
     </style>
   </head>
@@ -38,7 +47,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <div class="card">
+          <div class="cadre">
             <div class="date" id="date"></div>
             <div class="clock">
               <span class="horloge" id="horloge"></span>
