--- a/index.html
+++ b/index.html
@@ -99,25 +99,12 @@
                 <div class="accordion-body" id="h_h"> </div>
               </div>
             </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="flush-headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                  <h3>Mensuel</h3>
-                </button>
-              </h2>
-              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body" id="h_m"> </div>
-              </div>
-            </div>
           </div>
-
       </div>
     </div>
     <script>
-      var url = "https://kayoo123.github.io/astroo-api/jour.json";
-
       window
-        .fetch(url)
+        .fetch("https://kayoo123.github.io/astroo-api/jour.json")
         .then(function (response) {
           return response.json();
         })
@@ -132,14 +119,7 @@
         .then(function (json) {
           return doSomethingWith("h_h", json);
         });
-      window
-        .fetch("https://kayoo123.github.io/astroo-api/mensuel.json")
-        .then(function (response) {
-          return response.json();
-        })
-        .then(function (json) {
-          return doSomethingWith("h_m", json);
-        });
+    
       function doSomethingWith(nom, json) {
         document.getElementById(nom).innerHTML = json.vierge;
       }
