--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="row">
         <div class="col">
           <div class="cadre">
-            <h2 class="date" id="date"></h2><br/>
+            <div class="date" id="date"></div>
             <div class="clock">
               <span class="horloge" id="horloge"></span>
               <div class="hand hours" id="aig_h"></div>
