--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         line-height: 1.6;
         font-family: "Oooh Baby" !important;
       }
-      .container{
+      .bg-gradient{
         background-image: radial-gradient(
           ellipse at center,
           rgba(255, 179, 206, 0) 0%,
@@ -37,7 +37,7 @@
     </style>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid bg-gradient">
       <div class="row">
         <div class="col">
           <div class="cadre">
