--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       }
     </style>
   </head>
-  <body>
-    <div class="container-fluid bg-gradient">
+  <body class="bg-gradient px-4">
+    <div class="container-fluid ">
       <div class="row">
         <div class="col">
           <div class="cadre">
