--- a/index.html
+++ b/index.html
@@ -24,19 +24,23 @@
       body {
         line-height: 1.6;
         font-family: "Oooh Baby" !important;
+        align-items: center;
+  background: radial-gradient(ellipse at center, rgba(255,179,206,0) 0%, rgba(255,180,199,0) 43%, rgba(255,181,189,0.43) 100%)  !important;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  display: flex;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffb3ce', endColorstr='#6effb5bd', GradientType=1);
+  flex-direction: column; 
+  height: 100vh;
+  justify-content: center;
+  min-width: 184px;
+  overflow-x: hidden;
+  transition: background-color .2s;
       }
-      .bg-gradient{
-        background-image: radial-gradient(
-          ellipse at center,
-          rgba(255, 179, 206, 0) 0%,
-          rgba(255, 180, 199, 0) 43%,
-          rgba(255, 181, 189, 0.43) 100%
-        );
-        background-size: cover;
-      }
+ 
     </style>
   </head>
-  <body class="bg-gradient px-4">
+  <body  >
     <div class="container-fluid ">
       <div class="row">
         <div class="col">
