--- a/calculator.html
+++ b/calculator.html
@@ -1,207 +1,185 @@
-<!-- origenal : https://codepen.io/dishabansal/pen/xypOBB -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>calculator</title>
-    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=MuseoModerno:wght@300;400&display=swap" rel="stylesheet">
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=MuseoModerno:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
 
     <style>
+      body {
+        margin: 0 auto;
+        text-align: center;
+        font-size: 23px;
+        color: white;
+        background-color: white;
+      }
 
-body {
-  margin: 0 auto;
-  text-align: center;
-  font-size: 23px;
-  color: white;
-  background-color:white;
+      .main {
+        max-width: 10%;
+      }
 
-}
+      a,
+      a:visited {
+        color: goldenrod;
+      }
 
-.main {
-  max-width: 10%;
-}
+      .dark {
+        background: #b7df89 !important;
+      }
 
-a,
-a:visited  {
-  color: goldenrod;
-}
+      .button > .over {
+        text-decoration: overline;
+        display: inline-block;
+        position: relative;
+        top: 3px;
+        left: -4px;
+      }
 
-.dark {
-  background : #b7df89 !important;
-}
+      .calculator {
+        display: inline-block;
+        background: white;
+        margin: 1% 0;
+        color: black;
+        border-radius: 5%;
+        border: 1px solid #e7e7e7;
+        /*     box-shadow: 0px 8px 20px 0px grey; */
+        background-color: white;
+      }
 
-.button > .over {
-  text-decoration:overline;
-  display: inline-block;
-  position:relative;
-  top: 3px;
-  left: -4px;
-}
+      .calculator button {
+        font-size: x-large;
+        color: #3f3f3f;
+        width: 2.5em;
+        min-height: 2.5em;
+        margin: 0.8%;
+        border-radius: 25%;
+        background-color: #cad8d8;
+        border: 1px solid #ad919100;
+        font-family: "MuseoModerno", cursive;
+      }
 
-.calculator {
-  
-    display: inline-block;
-    background: white;
-    margin: 1% 0;
-    color: black;
-    border-radius: 5%;
-	border: 1px solid #e7e7e7;
-/*     box-shadow: 0px 8px 20px 0px grey; */
-    background-color: white;
+      .calculator button:hover,
+      #clear:hover,
+      #backspace:hover {
+        background: lightskyblue !important;
+        color: #626262;
+        transform: scale(0.9);
+        border-radius: 20%;
+      }
 
-  
-}
+      .calculator button:focus,
+      #clear:focus,
+      #backspace:focus {
+        outline: none;
+      }
 
-.calculator button {
-  
-    font-size: x-large;
-    color: #3f3f3f;
-    width: 2.5em;
-    min-height: 2.5em;
-    margin: 0.8%;
-    border-radius: 25%;
-    background-color: #cad8d8;
-    border: 1px solid #ad919100;
-    font-family: 'MuseoModerno', cursive;
+      .button:active,
+      .button-active {
+        background: lightcyan;
+        color: white;
+        transform: scale(0.9);
+      }
 
-}
+      #screen {
+        background-color: #ececec;
+        border: 3px solid transparent;
+        /* box-shadow: 3px 3px 3px 3px grey; */
+        border-radius: 29px;
+        width: 80%;
+        height: 120px;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 5%;
+        text-align: right;
+        overflow: auto;
+        overflow-wrap: break-word;
+        font-size: 60px;
+        font-family: "Dosis", sans-serif;
+      }
 
+      #clean {
+        background: #c4eded;
+      }
 
-.calculator button:hover,
-#clear:hover,
-#backspace:hover {
-  background: lightskyblue!important;
-  color: #626262;
-  transform: scale(0.9);
-  border-radius: 20%;
-}
+      .calculator__row1,
+      .calculator__row2,
+      .calculator__row3,
+      .calculator__row4,
+      .calculator__row5 {
+        display: flex;
+        margin: 0 auto;
+        max-width: 80%;
+        justify-content: space-around;
+        align-items: center;
+        font-family: "Libre Barcode 128 Text", cursive;
+      }
 
-.calculator button:focus,
-#clear:focus,
-#backspace:focus {
-  outline: none;
-}
+      .calculator__row5 {
+        margin-bottom: 3%;
+      }
 
-.button:active,
-.button-active {
-  background: lightcyan;
-  color: white;
-  transform: scale(0.9);
-}
-
- #screen{
-    background-color: #ececec;
-    border: 3px solid transparent;
-    /* box-shadow: 3px 3px 3px 3px grey; */
-    border-radius: 29px;
-    width: 80%;
-    height: 120px;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 5%;
-    text-align: right;
-    overflow: auto;
-    overflow-wrap: break-word;
-    font-size: 60px;
-    font-family: 'Dosis', sans-serif;
-
-}
-
-    
-
-
-#clean {
-  background: #c4eded;
-}
-
-
-.calculator__row1,
-.calculator__row2,
-.calculator__row3,
-.calculator__row4,
-.calculator__row5 {
-  display: flex;
-  margin: 0 auto;
-     max-width: 80%;
-  justify-content: space-around;
-  align-items: center;
-  font-family: 'Libre Barcode 128 Text', cursive;
-}
-
-.calculator__row5 {
-  margin-bottom: 3%;
-} 
-
-.footer {
-  /* margin-top: 2%;
+      .footer {
+        /* margin-top: 2%;
   font-size: medium; */
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
-
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+      }
     </style>
-</head>
-<body>
-    <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text" rel="stylesheet">
-<div id="main">
-		<div class="calculator">
-		<input type="text" id="screen">
-      <div class="calculator__row1">
-    <button class="button">Rad</button>
-    <button class="button" >Deg</button>
-                               
-    <h1 style="font-size: 200%;margin-left: 230px;margin-right: 20px;"></h1>
-    <button class="button" id="clean">AC</button>
-</div>
-    <div class="calculator__row2">
-         <button class="button">sin</button>
-         <button class="button">cos</button>
-         <button class="button">tan</button>
-		   <button class="button dark">7</button>
-			<button class="button dark">8</button>
-			<button class="button dark">9</button>
-			<button class="button">*</button>
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text"
+      rel="stylesheet"
+    />
+    <div id="main">
+      <div class="calculator">
+        <input type="text" id="screen" />
+        <div class="calculator__row1">
+          <button class="button">Rad</button>
+          <button class="button">Deg</button>
+
+          <h1
+            style="font-size: 200%; margin-left: 230px; margin-right: 20px"
+          ></h1>
+          <button class="button" id="clean">AC</button>
+        </div>
+        <div class="calculator__row2">
+          <button class="button">sin</button>
+          <button class="button">cos</button>
+          <button class="button">tan</button>
+          <button class="button dark">7</button>
+          <button class="button dark">8</button>
+          <button class="button dark">9</button>
+          <button class="button">*</button>
+        </div>
+        <div class="calculator__row3">
+          <button class="button">x^</button>
+          <button class="button">pi</button>
+          <button class="button">%</button>
+          <button class="button dark">4</button>
+          <button class="button dark">5</button>
+          <button class="button dark">6</button>
+          <button class="button">/</button>
+        </div>
+        <div class="calculator__row4">
+          <button class="button">ln</button>
+          <button class="button">log</button>
+          <button class="button">x!</button>
+          <button class="button dark">1</button>
+          <button class="button dark">2</button>
+          <button class="button dark">3</button>
+          <button class="button">-</button>
+        </div>
+        <div class="calculator__row5">
+          <button class="button">&radic;<span class="over"></span></button>
+          <button class="button">(</button>
+          <button class="button">)</button>
+          <button class="button">.</button>
+          <button class="button dark">0</button>
+          <button class="button">=</button>
+          <button class="button">+</button>
+        </div>
+      </div>
     </div>
-	<div class="calculator__row3">
-        <button class="button">x^</button>
-        <button class="button">pi</button>
-        <button class="button">%</button>
-		  <button class="button dark">4</button>
-			<button class="button dark">5</button>
-			<button class="button dark">6</button>
-			<button class="button">/</button>
-	</div>
-	<div class="calculator__row4">
-      <button class="button">ln</button>
-      <button class="button">log</button>
-      <button class="button">x!</button>
-			<button class="button dark">1</button>
-			<button class="button dark">2</button>
-			<button class="button dark">3</button>
-			<button class="button">-</button>
-	</div>
-			<div class="calculator__row5">
-      <button class="button">&radic;<span class="over"></span></button>
-      <button class="button">(</button>
-      <button class="button">)</button>
-			<button class="button">.</button>
-      <button class="button dark">0</button>
-			<button class="button">=</button>
-			<button class="button">+</button>
-</div>
-</div>
-</div>
 
-	
-		
-	
-</body>
-
-<script type="module" src="./js/calculator.js"></script>
-
-</html>
+  <script type="module" src="./js/calculator.js"></script>
