--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ window
         fetch("https://horoscope-app-api.vercel.app/api/v1/get-horoscope/daily?sign=virgo&day=today", {
   headers: {
     Accept: "application/json"
-  }
+  }, mode: 'no-cors'
 }).then(response => response.json())
 .then(response => console.log(JSON.stringify(response)))
 .catch(error => console.log("Erreur : " + error));
