--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container-fluid ">
       <div class="row">
         <div class="col ">
-          <div class="cadre">
+          <div class="cadre h-100">
             <div class="date" id="date"></div>
             <div class="clock">
               <span class="horloge" id="horloge"></span>
@@ -62,8 +62,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="cadre">
+        <div class="col"> 
           <a
             class="weatherwidget-io"
             href="https://forecast7.com/fr/45d994d72/villefranche-sur-saone/"
@@ -76,13 +75,12 @@
             data-suncolor="#feffa4"
             data-cloudcolor="#93b8ed"
             >VILLEFRANCHE-SUR-SAONE</a
-          >
-        </div>
+          > 
       </div>
            
     
         <div class="col">
-          <div class="cadre">
+          <div class="cadre h-100">
           <nav>
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
     <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Aujourd'hui</button>
