--- a/index.html
+++ b/index.html
@@ -133,13 +133,24 @@
       });
      return  res.json().translatedText;
       }
-fetch("https://horoscope-app-api.vercel.app/api/v1/get-horoscope/daily?sign=virgo&day=today", {
-  headers: {
-    Accept: "application/json"
-  }, mode: 'no-cors'
-}).then(response => response.json())
-.then(response => console.log(JSON.stringify(response)))
-.catch(error => console.log("Erreur : " + error));
+      function horos(){
+        const res =  fetch("https://horoscope-app-api.vercel.app/api/v1/get-horoscope/daily?sign=virgo&day=today", {
+        method: "GET",
+        body: JSON.stringify({
+          sign: "virgo" 
+        }),
+        headers: { "Content-Type": "application/json" }, mode: 'no-cors'
+      });
+     return  res.json();
+      }
+      console.log(horos);
+      fetch("https://horoscope-app-api.vercel.app/api/v1/get-horoscope/daily?sign=virgo&day=today", {
+  method: "GET",
+  body: JSON.stringify({ foo: "bar" }),
+  headers: { "Content-Type": "application/json" },
+})  .then((res) => res.json())
+  .then((json) => console.log(json));
+ 
 
       const span_h = document.getElementById("aig_h");
       const span_m = document.getElementById("aig_m");
