--- a/index.html
+++ b/index.html
@@ -134,14 +134,15 @@
      return  res.json().translatedText;
       }
       function horos(){
-        const res =  fetch("https://horoscope-app-api.vercel.app/api/v1/get-horoscope/daily?sign=virgo&day=today", {
+       fetch("https://horoscope-app-api.vercel.app/api/v1/get-horoscope/daily?sign=virgo&day=today", {
         method: "GET",
         body: JSON.stringify({
           sign: "virgo" 
         }),
         headers: { "Content-Type": "application/json" }, mode: 'no-cors'
-      });
-     return  res.json();
+      }).then(response => response.json())
+   .then(json =>{console.log(JSON.stringify(json)); return JSON.stringify(json)});
+     
       }
       console.log(horos());
       fetch("https://horoscope-app-api.vercel.app/api/v1/get-horoscope/daily?sign=virgo&day=today", {
