--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         var jsonretour;
        fetch("https://horoscope-app-api.vercel.app/api/v1/get-horoscope/daily?sign=virgo&day=today", {
         method: "GET",
-        headers: { "Content-Type": "application/json" }, mode: 'no-cors'
+        headers: { "Content-Type": "application/json" ,"Access-Control-Allow-Origin": "*"}
       }).then(response => response.json())
    .then(json =>jsonretour=json);
      return JSON.stringify(jsonretour);
