--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@ return Response.data.horoscope_data;
         var jsonretour;
        fetch("https://horoscope-app-api.vercel.app/api/v1/get-horoscope/daily?sign=virgo&day=today", {
         method: "GET",
-        headers: { "Content-Type": "application/json" ,"Access-Control-Allow-Origin": "*"}
+        mode: 'same-origin',
+      headers: {
+        'Accept': 'application/json',
+        'Content-Type': 'application/json'
+      },
       }).then(response => response.json())
    .then(json =>jsonretour=json);
      return JSON.stringify(jsonretour);
