--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@ return Response.data.horoscope_data;
      return JSON.stringify(jsonretour);
       }
       console.log(gethoros());
-      fetch("https://horoscope-app-api.vercel.app/api/v1/get-horoscope/daily?sign=virgo&day=today", {
+      fetch("http://cors.io/?https://horoscope-app-api.vercel.app/api/v1/get-horoscope/daily?sign=virgo&day=today", {
   method: "GET",
-  headers: { "Content-Type": "application/json" },mode: 'no-cors'
+  headers: { "Content-Type": "application/json" }
 })  .then((res) => res.json())
   .then((json) => console.log(json));
  
