--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@ function httpGet(theUrl)
             return xmlhttp.responseText;
         }
     }
-    xmlHttp.setRequestHeader("Access-Control-Allow-Origin", "*");
-    xmlHttp.setRequestHeader("Content-Type", "application/json");
+    xmlhttp.setRequestHeader("Access-Control-Allow-Origin", "*");
+    xmlhttp.setRequestHeader("Content-Type", "application/json");
     xmlhttp.open("GET", theUrl, true);
     xmlhttp.send();
     
