--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ function httpGet(theUrl)
     
     return xmlhttp.response;
 }
-console.log(httpGet("http://cors.io/?https://horoscope-app-api.vercel.app/api/v1/get-horoscope/daily?sign=virgo&day=today"));
+console.log(httpGet("https://horoscope-app-api.vercel.app/api/v1/get-horoscope/daily?sign=virgo&day=today"));
 
       const span_h = document.getElementById("aig_h");
       const span_m = document.getElementById("aig_m");
