--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
           return response.json();
         })
         .then(function (json) {
-          return doSomethingWith("h_h", json.description);
+          console.log(JSON.parse(json));
+          console.log(translate(JSON.parse(json).description));
+          return doSomethingWith("h_h", json);
         });
  
   
