--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         })
         .then(function (json) {
           console.log(json);
-          console.log(JSON.parse(json));
+          console.log(json.description);
           console.log(translate(JSON.parse(json).description));
           return doSomethingWith("h_h", json);
         });
