--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@ function translate(text){
             document.getElementById(nom).innerHTML = json;
           }
     function getapi(url){
+      var retour;
       window
           .fetch(url)
           .then(function (response) {
@@ -161,8 +162,10 @@ function translate(text){
           })
           .then(function (json) {
             console.log(json); 
+            retour = json;
             return json;
-          }); 
+          });
+          return retour; 
     }
 
       const span_h = document.getElementById("aig_h");
