--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
       }
         
         */
+        console.log (getapi("https://kayoo123.github.io/astroo-api/jour.json"));
       var horosjour= getapi("https://kayoo123.github.io/astroo-api/jour.json");
       console.log (horosjour);
       console.log(JSON.parse(horosjour).vierge);
@@ -165,6 +166,7 @@ function translate(text){
             retour = json;
             return json;
           });
+          console.log(retour); 
           return retour; 
     }
 
