--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       }
         
         */
-        console.log (getapi("https://kayoo123.github.io/astroo-api/jour.json"));
-      var horosjour= getapi("https://kayoo123.github.io/astroo-api/jour.json");
+        console.log (getItems("https://kayoo123.github.io/astroo-api/jour.json"));
+      var horosjour= getItems("https://kayoo123.github.io/astroo-api/jour.json");
       console.log (horosjour);
       console.log(JSON.parse(horosjour).vierge);
       ecrit("h_j",JSON.parse(horosjour).vierge);
@@ -151,11 +151,10 @@ function translate(text){
     });
 
 }
-    function ecrit(nom, json) {
-            document.getElementById(nom).innerHTML = json;
-          }
+    function ecrit(nom, json) {document.getElementById(nom).innerHTML = json;}
+
     function getapi(url){
-      var retour=
+      const retour=
       window
           .fetch(url)
           .then(function (response) {
@@ -164,11 +163,22 @@ function translate(text){
           .then(function (json) {
             console.log(json); 
             return json;
-          });
-          console.log(retour); 
+          }); 
           return retour; 
     }
-
+async function getItems(url){
+try {
+    const response = await fetch(url, {
+        method: 'GET',
+        cache: 'no-cache',
+        headers: {
+            'Content-Type': 'application/json',
+        }
+    });
+    const data = await response.json();
+    return data;
+} catch(e) {
+}
       const span_h = document.getElementById("aig_h");
       const span_m = document.getElementById("aig_m");
       const span_s = document.getElementById("aig_s");
