--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@ if (response.ok) { // if HTTP-status is 200-299
 }
 return json ;
        }
-        console.log (await testfetch("https://kayoo123.github.io/astroo-api/jour.json"));
+       var t = await testfetch("https://kayoo123.github.io/astroo-api/jour.json");
+        console.log (t);
       var horosjour= getItems("https://kayoo123.github.io/astroo-api/jour.json");
       console.log (horosjour);
       console.log(JSON.parse(horosjour).vierge);
