--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ return json ;
        }
  
        
-      var horosjour= getItems("https://kayoo123.github.io/astroo-api/jour.json");
+      var horosjour= testfetch("https://kayoo123.github.io/astroo-api/jour.json");
       console.log (horosjour);
       console.log(JSON.parse(horosjour).vierge);
       ecrit("h_j",JSON.parse(horosjour).vierge);
@@ -166,9 +166,7 @@ function translate(text){
     function ecrit(nom, json) {document.getElementById(nom).innerHTML = json;}
 
     function getapi(url){
-      const retour=
-      window
-          .fetch(url)
+      const retour=fetch(url)
           .then(function (response) {
             return response.json();
           })
@@ -178,19 +176,7 @@ function translate(text){
           }); 
           return retour; 
     }
-async function getItems(url){
-try {
-    const response = await fetch(url, {
-        method: 'GET',
-        cache: 'no-cache',
-        headers: {
-            'Content-Type': 'application/json',
-        }
-    });
-    const data = await response.json();
-    return data;
-} catch(e) {
-}}
+
       const span_h = document.getElementById("aig_h");
       const span_m = document.getElementById("aig_m");
       const span_s = document.getElementById("aig_s");
