--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
         */
       async function  testfetch(url){
        let response = await fetch(url);
-
+var retour ; 
 if (response.ok) { // if HTTP-status is 200-299
   // get the response body (the method explained below)
-  let json = await response.json();
+  retour = await response.json();
 } else {
   alert("HTTP-Error: " + response.status);
 }
-return json ;
+return retour ;
        }
  
        
