--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ return retour ;
        }
  
        
-      var horosjour= testfetch("https://kayoo123.github.io/astroo-api/jour.json");
+      var horosjour= testfetch("https://kayoo123.github.io/astroo-api/jour.json").response;
       console.log (horosjour);
       console.log(JSON.parse(horosjour).vierge);
       ecrit("h_j",JSON.parse(horosjour).vierge);
