--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
        }
 
        
-      testfetch("https://kayoo123.github.io/astroo-api/jour.json").then(x => ecrit("h_j",JSON.parse(x).vierge)); 
-      getapi("https://us-central1-tf-natal.cloudfunctions.net/horoscopeapi_test?token=mmEUtLATc8w_UNnHuR2&sign=virgo&date=today").then(horos =>  ecrit("h_h", horos.description)) ;
+      testfetch("https://kayoo123.github.io/astroo-api/jour.json").then(x => ecrit("h_j",x.vierge)); 
+      getapi("https://us-central1-tf-natal.cloudfunctions.net/horoscopeapi_test?token=mmEUtLATc8w_UNnHuR2&sign=virgo&date=today").then(horos =>  ecrit("h_h", translate(horos.description))) ;
     
-      console.log(translate(horos.description));
+ 
 
 function translate(text){
    
