--- a/index.html
+++ b/index.html
@@ -142,22 +142,25 @@
         }
         return retour ;
        }
-
-       try {
+const horosj="";
+const horosh="";
+async function  testfetch2(url, out){
+ 
 // in ESM we can use top-level await
-const resp = await fetch("https://kayoo123.github.io/astroo-api/jour.json");
+const resp = await fetch(url);
 
 console.log(resp.status); // 200
-console.log(await resp.text()); // a HTML document
-
-} catch (e) {
-    // Deal with the fact the chain failed
+out = await resp.text();
+horosh =  await resp.text();
 }
+ 
        
       testfetch("https://kayoo123.github.io/astroo-api/jour.json").then(x => ecrit("h_j",x.vierge)); 
       getapi("https://us-central1-tf-natal.cloudfunctions.net/horoscopeapi_test?token=mmEUtLATc8w_UNnHuR2&sign=virgo&date=today").then(horos =>  ecrit("h_h", translate(horos.description))) ;
     
- 
+ console.log(testfetch2("https://kayoo123.github.io/astroo-api/jour.json", horosj));
+ console.log(horosj);
+ console.log(horosh);
 
 function translate(text){
    
